minikube/description-r-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: description-r
  name: description-r
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: description-r
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/spring-net: "true"
        io.kompose.service: description-r
    spec:
      containers:
        - env:
            - name: SPRING_DATA_MONGODB_DATABASE
              value: IndvProject
            - name: SPRING_DATA_MONGODB_URI
              value: mongodb+srv://455181:83ZMrlRZAIbcSTqM@project.uah3szf.mongodb.net/?retryWrites=true&w=majority
          image: imanileemans/description-r
          name: description-r
          ports:
            - containerPort: 8082
          resources: {}
      restartPolicy: Always
status: {}
