minikube/description-r-deployment-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: description-r-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: description-r
  template:
    metadata:
      labels:
        app: description-r
    spec:
      containers:
      - env:
          - name: SPRING_DATA_MONGODB_DATABASE
            value: IndvProject
          - name: SPRING_DATA_MONGODB_URI
            value: mongodb+srv://455181:83ZMrlRZAIbcSTqM@project.uah3szf.mongodb.net/?retryWrites=true&w=majority
        name: description-r
        image: imanileemans/description-r:latest
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: description-r-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: description-r
  ports:
  - name: description-r
    protocol: TCP
    port: 80
    targetPort: 80
