minikube/ingress-srv-azure.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - http: 
        paths:
          - path: /api/descriptions
            pathType: Prefix
            backend:
              service:
                name: description-r-clusterip-srv
                port:
                  number: 80
