minikube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: imaniproject.nl
      http:
        paths:
          - path: /api/descriptions
            pathType: Prefix
            backend:
              service:
                name: description-reading
                port:
                  number: 80
